--- a/Barilnik.Nsudotnet.NumberGuesser/NumberGuesser/NumberGuesser.csproj
+++ b/Barilnik.Nsudotnet.NumberGuesser/NumberGuesser/NumberGuesser.csproj
@@ -44,8 +44,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Bot.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="GamingProcess.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Results.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
