--- a/Barilnik.Nsudotnet.WebAfisha/Afisha/Afisha/Afisha.csproj
+++ b/Barilnik.Nsudotnet.WebAfisha/Afisha/Afisha/Afisha.csproj
@@ -170,12 +170,21 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\PerformersController.cs" />
+    <Compile Include="DAL\PostContext.cs" />
+    <Compile Include="DAL\PostInitializer.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\Afisha.cs" />
+    <Compile Include="Models\Boigraphy.cs" />
+    <Compile Include="Models\IDateProvider.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\Performer.cs" />
+    <Compile Include="Models\Person.cs" />
+    <Compile Include="Models\Post.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -234,6 +243,11 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
+    <Content Include="Views\Performers\Create.cshtml" />
+    <Content Include="Views\Performers\Delete.cshtml" />
+    <Content Include="Views\Performers\Details.cshtml" />
+    <Content Include="Views\Performers\Edit.cshtml" />
+    <Content Include="Views\Performers\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
